adds camera location and look_at + license

--- a/README
+++ b/README
@@ -3,6 +3,7 @@ pypov - povray scene description DOM for python
 1) Introduction
 2) Installation
 3) Usage
+4) License
 
 
 ------------------------------------------------------------------------
@@ -10,6 +11,9 @@ Introduction
 
 This library lets you describe a povray scene using python objects. The
 scene graph can be written into a povray file.
+
+Be aware that the whole library is a huge 'work in progress'. If you are
+missing an attribute with an element please issue a pull request.
 
 
 ------------------------------------------------------------------------
@@ -21,4 +25,10 @@ $ python setup.py install --home ~/.local
 ------------------------------------------------------------------------
 Usage
 
-TODO
+See example_scene.py.
+
+
+------------------------------------------------------------------------
+License
+
+See COPYING.
